force-app/main/default/objects/ssot__PartyAccreditation__dlm/fields/ssot__AccreditationIssuerName__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccreditationIssuerName__c</fullName>
    <label>Accreditation Issuer Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AccreditationIssuerName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>