force-app/main/default/objects/ssot__PartyAccreditation__dlm/fields/ssot__AccreditationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccreditationStatus__c</fullName>
    <label>Accreditation Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AccreditationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>