force-app/main/default/objects/ssot__PartyAccreditation__dlm/fields/ssot__AccreditationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccreditationType__c</fullName>
    <label>Accreditation Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AccreditationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>