force-app/main/default/objects/ssot__PartyAccreditation__dlm/fields/ssot__AccreditingBody__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccreditingBody__c</fullName>
    <label>Accrediting Body</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AccreditingBody</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>