force-app/main/default/objects/ssot__PartyAccreditation__dlm/fields/ssot__DataSourceObjectId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DataSourceObjectId__c</fullName>
    <label>Data Source Object</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DataSourceObjectId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>