force-app/main/default/objects/ssot__PartyAccreditation__dlm/fields/ssot__LastFullSurveyDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastFullSurveyDate__c</fullName>
    <label>Last Full Survey Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastFullSurveyDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>