force-app/main/default/objects/ssot__PartyAccreditation__dlm/fields/ssot__rel_1720291144226_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291144226_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyAccreditation_ReceivingPartyId__rel</label>
    <referenceTo>ssot__Party__dlm</referenceTo>
    <relationshipLabel>PartyAccreditation_ReceivingPartyId__rel</relationshipLabel>
    <relationshipName>rel_1720291144226_end</relationshipName>
    <type>Lookup</type>
</CustomField>